--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
 == README
+Assignment: [pair] Code Snippets Next Module
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+As you learn more and more about web development, you will have more and more snippets of code to build different components of your application. Build a tool in Rails that helps you store code snippets.
 
-Things you may want to cover:
+You must have test coverage (doesn't have to be a 100%) for creating and updating the snippet kinds and the snippets.
 
-* Ruby version
+The box must accept markdown. Make sure to have the code highlighted properly depending on the language.
 
-* System dependencies
+Note: avoid using `type` as a column name in models. More on that will come later. This is why the wireframe uses `Kind`, you can pick another word if you'd like just don't use `type`.
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+[Stretch] Make snippets owned by users so a user can create their own snippets. Also add `private` checkbox to the snippet code. If the code snippet is private only the user can see it. If the snippet is not private it means it's public and it will show on the home page listing where it will list all the snippets for all the users. 
